generateTree implementation